Added few charts and analysis to the report.

--- a/RR_Report.ipynb
+++ b/RR_Report.ipynb
@@ -21,8 +21,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T14:32:07.723949Z",
-     "start_time": "2025-05-09T14:32:07.718572Z"
+     "end_time": "2025-05-09T15:36:24.285667Z",
+     "start_time": "2025-05-09T15:36:23.762423Z"
     }
    },
    "cell_type": "code",
@@ -32,13 +32,13 @@
    ],
    "id": "8c063b50ad8c662b",
    "outputs": [],
-   "execution_count": 54
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:16:15.123105Z",
-     "start_time": "2025-05-09T15:16:15.099169Z"
+     "end_time": "2025-05-09T15:37:40.817902Z",
+     "start_time": "2025-05-09T15:37:40.756364Z"
     }
    },
    "cell_type": "code",
@@ -50,13 +50,19 @@
    ],
    "id": "5ac5f388989506c0",
    "outputs": [],
-   "execution_count": 80
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "***",
+   "id": "c2fe034a67db532a"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:00:16.023524Z",
-     "start_time": "2025-05-09T15:00:15.873836Z"
+     "end_time": "2025-05-09T15:37:42.977182Z",
+     "start_time": "2025-05-09T15:37:42.467358Z"
     }
    },
    "cell_type": "code",
@@ -69,7 +75,7 @@
        "<Axes: title={'center': 'Views of The Office Episodes'}, xlabel='Episodes', ylabel='Views (in mln)'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +90,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 72
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -101,8 +107,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:01:06.861017Z",
-     "start_time": "2025-05-09T15:01:05.968496Z"
+     "end_time": "2025-05-09T15:37:45.809538Z",
+     "start_time": "2025-05-09T15:37:45.691685Z"
     }
    },
    "cell_type": "code",
@@ -115,7 +121,7 @@
        "<Axes: title={'center': 'Average Views of The Office Episodes'}, xlabel='Seasons', ylabel='Average Views (in mln)'>"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -130,35 +136,50 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 73
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:20:07.174565Z",
-     "start_time": "2025-05-09T15:20:07.159704Z"
+     "end_time": "2025-05-09T15:39:56.332585Z",
+     "start_time": "2025-05-09T15:39:56.318793Z"
     }
    },
    "cell_type": "code",
    "source": [
     "average_views = data.groupby('Season')['Views (in mln)'].mean()\n",
-    "drop = (average_views[9] - average_views[5])/average_views[5] * 100"
+    "drop = ((average_views[9] - average_views[5])/average_views[5] * 100).round(2)\n",
+    "print('Drop in views between the season 5 and 9:', drop , '%')"
    ],
    "id": "f6fbe2eba46d7ac3",
-   "outputs": [],
-   "execution_count": 87
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drop in views between the season 5 and 9: -55.02 %\n"
+     ]
+    }
+   ],
+   "execution_count": 12
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The average viewership of each season is presented on the chart above. We can see that the audience number peaked in season 5 and then started to decline. The last season had the lowest viewership, which is common for long-running shows as they tend to lose their audience over time. Views between season 5 and 9 dropped by {{ drop }}%.",
+   "source": "The average viewership of each season is presented on the chart above. We can see that the audience number peaked in season 5 and then started to decline. The last season had the lowest viewership, which is common for long-running shows as they tend to lose their audience over time. Views between season 5 and 9 dropped by 55%.",
    "id": "5af7c4054b8cc65a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "***",
+   "id": "19ca75af5a628e7e"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-09T15:21:49.314428Z",
-     "start_time": "2025-05-09T15:21:49.143369Z"
+     "end_time": "2025-05-09T15:37:56.218392Z",
+     "start_time": "2025-05-09T15:37:56.087553Z"
     }
    },
    "cell_type": "code",
@@ -171,7 +192,7 @@
        "<Axes: title={'center': 'IMDB Ratings of The Office Episodes'}, xlabel='Episodes', ylabel='IMDB Rating'>"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,12 +207,12 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 88
+   "execution_count": 7
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "",
+   "source": "We also see that the IMDB ratings of the episodes are decreasing over time. The ratings peaked at around **9.5** in season 4 and then started to decline. The last season had the lowest ratings, with only around **7.5**. The finale episode has a rating of **9.8**, which is significantly higher than the average rating of the other episodes in the last 2 seasons.",
    "id": "54e767ba8d1e3311"
   },
   {
@@ -229,6 +250,49 @@
    "execution_count": 89
   },
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The average ratings of each season is presented on the chart above. We can see that the ratings peaked in season 4 and then started to decline. The last season had the lowest ratings, which is common for long-running shows as they tend to lose their audience over time. Ratings between season 4 and 8 dropped by 12%.",
+   "id": "b938a5cfd6450bf8"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T15:45:00.959247Z",
+     "start_time": "2025-05-09T15:45:00.945391Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "average_rank = data.groupby('Season')['IMDB Rating'].mean()\n",
+    "drop = ((average_rank[8] - average_views[3])/average_views[3] * 100).round(2)\n",
+    "print('Drop in IMDB rating between the season 3 and 8:', drop , '%')"
+   ],
+   "id": "28f8374ff1311c60",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drop in IMDB rating between the season 3 and 8: -12.09 %\n"
+     ]
+    }
+   ],
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "***",
+   "id": "2d26500c5057394f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We calculated the correlation between the views and IMDB ratings of the episodes. The correlation is **0.485**, which means that there is a moderate positive correlation between the two variables. This means that as the viewership increases, the IMDB ratings also tend to increase.",
+   "id": "8a3d6e5776c3429f"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-05-09T15:21:55.964221Z",
@@ -251,6 +315,12 @@
     }
    ],
    "execution_count": 90
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "***",
+   "id": "346c8550a1b43da3"
   },
   {
    "metadata": {
