Stylistic changes to the report.

--- a/RR_Report.ipynb
+++ b/RR_Report.ipynb
@@ -53,10 +53,317 @@
    "execution_count": 3
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T15:48:29.608936Z",
+     "start_time": "2025-05-09T15:48:29.540579Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data.head()",
+   "id": "f52b8ec93010e419",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "   Number  Season  Episode          Title  Views (in mln)  IMDB Rating  \\\n",
+       "0       1       1        1          Pilot           10.23          7.3   \n",
+       "1       2       1        2  Diversity Day            5.95          8.1   \n",
+       "2       3       1        3    Health Care            5.83          7.6   \n",
+       "3       4       1        4   The Alliance            5.26          7.8   \n",
+       "4       5       1        5     Basketball            5.03          8.2   \n",
+       "\n",
+       "   Unnamed: 6  Unnamed: 7     Change  \n",
+       "0         NaN         NaN        NaN  \n",
+       "1         NaN         NaN -41.837732  \n",
+       "2         NaN         NaN  -2.016807  \n",
+       "3         NaN         NaN  -9.777015  \n",
+       "4         NaN         NaN  -4.372624  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Episode</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Views (in mln)</th>\n",
+       "      <th>IMDB Rating</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Pilot</td>\n",
+       "      <td>10.23</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Diversity Day</td>\n",
+       "      <td>5.95</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-41.837732</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Health Care</td>\n",
+       "      <td>5.83</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-2.016807</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>The Alliance</td>\n",
+       "      <td>5.26</td>\n",
+       "      <td>7.8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-9.777015</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>5.03</td>\n",
+       "      <td>8.2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-4.372624</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-05-09T15:50:57.040128Z",
+     "start_time": "2025-05-09T15:50:56.973472Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "data.describe()",
+   "id": "4d1dc7d36c8c996a",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "           Number      Season     Episode  Views (in mln)  IMDB Rating  \\\n",
+       "count  201.000000  201.000000  201.000000      201.000000   201.000000   \n",
+       "mean   101.000000    5.452736   12.547264        7.390299     8.115423   \n",
+       "std     58.167861    2.364108    7.340913        2.307661     0.660008   \n",
+       "min      1.000000    1.000000    1.000000        3.250000     6.300000   \n",
+       "25%     51.000000    3.000000    6.000000        6.080000     7.700000   \n",
+       "50%    101.000000    6.000000   12.000000        7.660000     8.100000   \n",
+       "75%    151.000000    7.000000   19.000000        8.510000     8.500000   \n",
+       "max    201.000000    9.000000   28.000000       22.910000     9.800000   \n",
+       "\n",
+       "       Unnamed: 6  Unnamed: 7      Change  \n",
+       "count         0.0         0.0  200.000000  \n",
+       "mean          NaN         NaN    0.868133  \n",
+       "std           NaN         NaN   17.124280  \n",
+       "min           NaN         NaN  -62.985596  \n",
+       "25%           NaN         NaN   -6.661759  \n",
+       "50%           NaN         NaN    0.000000  \n",
+       "75%           NaN         NaN    5.689022  \n",
+       "max           NaN         NaN  161.529680  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Number</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Episode</th>\n",
+       "      <th>Views (in mln)</th>\n",
+       "      <th>IMDB Rating</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Change</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>200.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>5.452736</td>\n",
+       "      <td>12.547264</td>\n",
+       "      <td>7.390299</td>\n",
+       "      <td>8.115423</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.868133</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>58.167861</td>\n",
+       "      <td>2.364108</td>\n",
+       "      <td>7.340913</td>\n",
+       "      <td>2.307661</td>\n",
+       "      <td>0.660008</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>17.124280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.250000</td>\n",
+       "      <td>6.300000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-62.985596</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>51.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>6.080000</td>\n",
+       "      <td>7.700000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-6.661759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>101.000000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>7.660000</td>\n",
+       "      <td>8.100000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>151.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>8.510000</td>\n",
+       "      <td>8.500000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.689022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>201.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>28.000000</td>\n",
+       "      <td>22.910000</td>\n",
+       "      <td>9.800000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>161.529680</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "We can see that the total average of the viewership for the show is **7,4 millions**, with the highest viewership of **26 million** and the lowest of **2 million**. The average IMDB rating is **8.4**, with the highest rating of **9.8** and the lowest of **6.3**.",
+   "id": "561d913b1c4cbf6c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Viewership",
+   "id": "eac388cd9fcbb630"
+  },
+  {
    "metadata": {},
    "cell_type": "markdown",
    "source": "***",
-   "id": "c2fe034a67db532a"
+   "id": "80c1631aba8d8631"
   },
   {
    "metadata": {
@@ -166,8 +473,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The average viewership of each season is presented on the chart above. We can see that the audience number peaked in season 5 and then started to decline. The last season had the lowest viewership, which is common for long-running shows as they tend to lose their audience over time. Views between season 5 and 9 dropped by 55%.",
+   "source": "The average viewership of each season is presented on the chart above. We can see that the audience number peaked in season 5 and then started to decline. The last season had the lowest viewership, which is common for long-running shows as they tend to lose their audience over time. Views between season 5 and 9 dropped by **55%**.",
    "id": "5af7c4054b8cc65a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## IMDB Ratings",
+   "id": "68a0f614b2b447ef"
   },
   {
    "metadata": {},
@@ -252,7 +565,7 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "The average ratings of each season is presented on the chart above. We can see that the ratings peaked in season 4 and then started to decline. The last season had the lowest ratings, which is common for long-running shows as they tend to lose their audience over time. Ratings between season 4 and 8 dropped by 12%.",
+   "source": "The average ratings of each season is presented on the chart above. We can see that the ratings peaked in season 4 and then started to decline. The last season had the lowest ratings, which is common for long-running shows as they tend to lose their audience over time. Ratings between season 4 and 8 dropped by **12%**.",
    "id": "b938a5cfd6450bf8"
   },
   {
@@ -279,6 +592,12 @@
     }
    ],
    "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Correlation between Views and IMDB Ratings",
+   "id": "3f44d561d90fd8f5"
   },
   {
    "metadata": {},
